<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.demo</groupId>
    <artifactId>DemoApp</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <inceptionYear>2022</inceptionYear>
    <name>DemoApplication</name>
    <description>This is a simple implementation of an application providing good practices in terms of development and
        test
    </description>

    <contributors>
        <contributor>
            <name>Frédéric Delorme</name>
            <email>contact.snapgames@gmail.com</email>
            <organization>SnapGames</organization>
            <timezone>Europe/Paris</timezone>
            <organizationUrl>https://snapgames.github.io/</organizationUrl>
        </contributor>
    </contributors>

    <properties>
        <maven.compiler.target>18</maven.compiler.target>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.mainClass>com.demoapp.core.Application</project.mainClass>
    </properties>
    
    <scm>
        <url>https://github.com/mcgivrer/myproject</url>
        <connection>scm:git:git@github.com:mcgivrer/myproject.git</connection>
        <developerConnection>scm:git:https://github.com/mcgivrer/myproject.git</developerConnection>
        <tag>v${project.version}</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/mcgivrer/myproject/issues</url>
    </issueManagement>
    <ciManagement>
        <url>https://github.com/mcgivrer/myproject/actions/</url>
        <system>github-actions</system>
    </ciManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/mcgivrer/myproject</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.9.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!-- Resource parsing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <stylesheet>maven</stylesheet>
                    <source>${maven.compiler.source}</source>
                    <show>public</show>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                    <linksource>true</linksource>
                    <show>private</show>
                    <nohelp>true</nohelp>
                    <overview>${project.basedir}/README.md</overview>
                    <bottom>
                        <![CDATA[<em>MIT license \${project.inceptionYear} - SnapGames</em>]]>
                    </bottom>
                    <links>
                        <link>${project.issueManagement.url}</link>
                        <link>${project.ciManagement.url}</link>
                        <link>https://docs.oracle.com/en/java/javase/${maven.compiler.target}/docs/api/</link>
                    </links>
                    <!--doclet>ch.raffael.mddoclet.MarkdownDoclet</doclet>
                    <docletArtifact>
                        <groupId>ch.raffael.markdown-doclet</groupId>
                        <artifactId>markdown-doclet</artifactId>
                        <version>1.4</version>
                    </docletArtifact-->
                    <useStandardDocletOptions>true</useStandardDocletOptions>
                    <additionalOptions>--enable-preview</additionalOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Build the minimalist JAR without dependencies (Normal Edition) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${project.mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <argLine>
                        --enable-preview
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <argLine>
                        --enable-preview
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>--enable-preview</argument>
                        <argument>-classpath</argument>
                        <!-- automatically creates the classpath using all project dependencies,
                             also adding the project build directory -->
                        <classpath/>
                        <argument>${project.mainClass}</argument>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <profiles>
        <profile>
            <id>codecoverage</id>
            <activation>
                <property>CODACY_API_TOKEN</property>
            </activation>
            <build>
                <plugins>
                    <!-- Online Code Quality service verification -->
                    <plugin>
                        <groupId>com.gavinmogan</groupId>
                        <artifactId>codacy-maven-plugin</artifactId>
                        <version>1.2.0</version>
                        <configuration>
                            <!--suppress UnresolvedMavenProperty -->
                            <apiToken>${env.CODACY_API_TOKEN}</apiToken>
                            <!--suppress UnresolvedMavenProperty -->
                            <projectToken>${env.CODACY_PROJECT_TOKEN}</projectToken>
                            <coverageReportFile>target/site/jacoco/jacoco.xml</coverageReportFile>
                            <!--suppress UnresolvedMavenProperty -->
                            <commit>${env.TRAVIS_COMMIT}</commit>
                            <codacyApiBaseUrl>https://api.codacy.com</codacyApiBaseUrl>
                            <failOnMissingReportFile>false</failOnMissingReportFile>
                        </configuration>
                        <executions>
                            <execution>
                                <id>post-test</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>coverage</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
